tests/examples/bad/wrong_version_in_filedockblock.php
<?php
/**
 *
 * @file
 * @version 220
 * @copyright 2020 CN-Consult GmbH
 * @author Daniel Haas <daniel.haas@cn-consult.eu>
 */
 